# UFF-Estruturas-de-Dados-e-Seus-Algoritmos

./: .gitignore  README.md
Aula 01 - 25-mar-2025/01A - Implementacao 01 - Ponteiros/: CMakeLists.txt  main.c
Aula 02 - 27-mar-2025/01B - Implementacao 01 - TLSE/: CMakeLists.txt  TLSE.c  TLSE.h  main.c
Aula 02 - 27-mar-2025/02 - Implementacao 01 - TP/: CMakeLists.txt  main.c
Aula 03 - 17-mar-2026/01 - Exercicio 01 - Exclusao em LE/: CMakeLists.txt  README.md
Aula 03 - 17-mar-2026/01 - Exercicio 02 - Alteracao em LE/: CMakeLists.txt  README.md
Aula 03 - 17-mar-2026/01 - LAB - Exercicio 01/: CMakeLists.txt  lista-encadeada.c
Aula 03 - 17-mar-2026/01 - LAB - Exercicio 02/: CMakeLists.txt  lista-encadeada.c
Aula 04 - 03-abr-2025/03B - Implementacao 01 - TAB/: CMakeLists.txt  TAB.c  TAB.h  main.c
Aula 04 - 19-mar-2026/03 - Exercicio 01/: CMakeLists.txt  arvore-binaria.c  arvore-binaria.h
Aula 04 - 19-mar-2026/03 - Exercicio 02/: CMakeLists.txt  arvore-binaria.c  arvore-binaria.h
Aula 04 - 19-mar-2026/03 - Exercicio 07/: CMakeLists.txt  arvore-binaria.c  arvore-binaria.h  ordem-simetrica-nrecursiva.c  pilhas-vetores.h
Aula 04 - 19-mar-2026/03 - Exercicio 08/: CMakeLists.txt  pilhas-vetores.c  pos-ordem-nrecursiva.c
Aula 06 - 02-abr-2026/04 - Exercicio 01 - Maior Valor de uma ABB/: CMakeLists.txt
Aula 06 - 02-abr-2026/04 - Exercicio 02 - Mesmos Nos em AB/: CMakeLists.txt  README.md  mesmos-nos.c
Aula 16 - 21-mai-2026/12 - Exercicio 01 - Busca em Arvore B+ em Disco/: CMakeLists.txt  README.md  arvore_b_mais.c
(+42 files in other folders)
